<resources>
    <string name="app_name">All in One</string>
    <string name="call">Call</string>
    <string name="select_from_contact">Select from contact</string>
    <string name="type_number">Type Number</string>
    <string name="make_a_call">Make a call</string>
    <string name="send_mail">Send Mail</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="open_websit">Open websit</string>
    <string name="write_massage">Write massage</string>
    <string name="send_massage">Send Massage</string>
    <string name="todo">TODO</string>
    <string name="write_mail">Write Mail</string>
    <string name="subject">Subject</string>
    <string name="email_i_d">Email I\'d</string>
    <string name="your_mail_i_d">Your mail i\'d</string>
    <string name="minute">Minute</string>
    <string name="hour">hour</string>
    <string name="additional_message">additional message</string>
    <string name="enter_website_with_codomain">Enter website with codomain</string>
    <string name="search">Search</string>
</resources>