<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="335dp"
        android:layout_height="233dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1" />

    <Button
        android:id="@+id/call"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Openactivity"
        android:text="@string/make_a_call"
        app:layout_constraintBottom_toTopOf="@+id/Massage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/Massage"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Openactivity2"
        android:text="@string/send_massage"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call" />

    <Button
        android:id="@+id/mail"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Openactivity3"
        android:text="@string/send_mail"
        app:layout_constraintBottom_toTopOf="@+id/alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Massage" />

    <Button
        android:id="@+id/alarm"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Openactivity4"
        android:text="@string/set_alarm"
        app:layout_constraintBottom_toTopOf="@+id/website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <Button
        android:id="@+id/website"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="Openactivity5"
        android:text="@string/open_websit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm" />
</androidx.constraintlayout.widget.ConstraintLayout>