<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Call">

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/make_call"
        android:layout_width="178dp"
        android:layout_height="57dp"
        android:layout_marginBottom="140dp"
        android:onClick="openactivity1"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_number"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="255dp"
        android:layout_height="252dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/contact_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img2_1" />

</androidx.constraintlayout.widget.ConstraintLayout>